<resources>

    <!-- Name of the app -->
    <string name="app_name">My Nihongo</string>

    <!--Category for Numbers-->
    <string name="category_numbers">Numbers</string>

    <!--Category for Food-->
    <string name="category_food">Food</string>

    <!--Category for PlacesActivity-->
    <string name="category_places">Places</string>

    <!--Category for Family-->
    <string name="category_family">Family</string>

    <!--Strings for login and registration-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Log me in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>

</resources>
