<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/white_background"
    android:orientation="vertical">

    <!-- Numbers category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_numbers">

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:text="@string/category_numbers"/>
    </FrameLayout>

    <!-- Family category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_family">

        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:text="@string/category_family"/>
    </FrameLayout>

    <!-- PlacesActivity category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_places">

        <TextView
            android:id="@+id/places"
            style="@style/CategoryStyle"
            android:text="@string/category_places"/>
    </FrameLayout>

    <!-- Food category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_food">

        <TextView
            android:id="@+id/food"
            style="@style/CategoryStyle"
            android:text="@string/category_food"/>
    </FrameLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp" />


</LinearLayout>

